--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "node-xlsx": "^0.21.0",
+    "ts-node": "^10.7.0",
     "uuid": "^8.3.2"
   }
 }
